change profile id and name